src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AestCtr - Oppty Sales Process</fullName>
        <description>Used by Aesthetics Center users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Paid - In Full</fullName>
        </values>
        <values>
            <fullName>Paid - Partial</fullName>
        </values>
        <values>
            <fullName>Pending - Info</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assigned_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ServiceResource.ResourceType</field>
                <operation>equals</operation>
                <value>Technician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Contact__c</fullName>
        <label>Best Time to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Stage</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity_Status_History__c.Current__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity_Status_History__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Stage__c</fullName>
        <formula>Current_Stage__r.Days_in_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Preferred_Service__c</fullName>
        <label>Patient Preferred Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cool Sculpting - Abdomen</fullName>
                </value>
                <value>
                    <fullName>Botox</fullName>
                </value>
                <value>
                    <fullName>Chemical Peels</fullName>
                </value>
                <value>
                    <fullName>Facial</fullName>
                </value>
                <value>
                    <fullName>Laser Hair Removal</fullName>
                </value>
                <value>
                    <fullName>Microneedling</fullName>
                </value>
                <value>
                    <fullName>Restylane Kysse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <formula>Amount - Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <label>Total Paid</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <recordTypes>
        <fullName>Aesthetics_Center_Opportunity</fullName>
        <active>true</active>
        <businessProcess>AestCtr - Oppty Sales Process</businessProcess>
        <description>Used by Aesthetics Center users</description>
        <label>Aesthetics Center - Opportunity</label>
    </recordTypes>
    <validationRules>
        <fullName>Prevent_Stage_Paid_In_Full</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(StageName),
(ISPICKVAL(StageName, &quot;Paid - In Full&quot;)),
Remaining_Balance__c &gt; 0)</errorConditionFormula>
        <errorMessage>The remaining balance needs to be $0 for this stage.</errorMessage>
    </validationRules>
</CustomObject>